# chess

./: CMakeLists.txt  main.cpp  sprite.cpp  test.cpp
Game/: CMakeLists.txt  Game.cpp  Game.h  Move.h  pc.cpp  pc.h  player.cpp  player.h  window.cpp  window.h
Game/Board/: Board.cpp  Board.h  CMakeLists.txt
Game/Board/PiecesClasses/: Bishop.h  CMakeLists.txt  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
test/: chess_game  main.cpp
